--- a/BirthYAY/BirthYAY.UI/Resources/Styles/Colors.xaml
+++ b/BirthYAY/BirthYAY.UI/Resources/Styles/Colors.xaml
@@ -41,4 +41,9 @@
     <Color x:Key="Blue200Accent">#72ACF1</Color>
     <Color x:Key="Blue300Accent">#A7CBF6</Color>
 
+    <LinearGradientBrush x:Key="PrimaryGradient">
+        <GradientStop Color="#EE49FD" Offset="1" />
+        <GradientStop Color="#6157FFCC" Offset="0.8" />
+    </LinearGradientBrush>
+
 </ResourceDictionary>
