--- a/BirthYAY/BirthYAY.UI/Resources/Styles/Colors.xaml
+++ b/BirthYAY/BirthYAY.UI/Resources/Styles/Colors.xaml
@@ -40,6 +40,7 @@
     <Color x:Key="Blue100Accent">#3E8EED</Color>
     <Color x:Key="Blue200Accent">#72ACF1</Color>
     <Color x:Key="Blue300Accent">#A7CBF6</Color>
+    <Color x:Key="FontPurple">#350F50</Color>
 
     <LinearGradientBrush x:Key="PrimaryGradient">
         <GradientStop Color="#EE49FD" Offset="1" />
