--- a/BirthYAY/BirthYAY.UI/Views/WelcomePage.xaml
+++ b/BirthYAY/BirthYAY.UI/Views/WelcomePage.xaml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewmodels="clr-namespace:BirthYAY.UI.ViewModels"
              x:Class="BirthYAY.UI.Views.WelcomePage"
+             x:DataType="viewmodels:WelcomePageViewModel"
              Shell.NavBarIsVisible="False">
     
     <VerticalStackLayout Padding="20,45">
@@ -17,18 +19,19 @@
                             <Image Source="img.png" Aspect="Center"/>
 
                             <HorizontalStackLayout HorizontalOptions="Center">
-                                <Label Text="Birth" FontSize="36" FontAttributes="Bold"/>
-                                <Label Text="YAY" FontSize="36" FontAttributes="Bold" TextColor="#74278F"/>
+                                <Label Text="Birth" FontSize="36" FontAttributes="Bold" FontFamily="Inter"/>
+                                <Label Text="YAY" FontSize="36" FontAttributes="Bold" TextColor="#74278F" FontFamily="Inter"/>
                             </HorizontalStackLayout>
                         </VerticalStackLayout>
-                        <Label Text="Never miss the important events of those you care so much about." TextColor="#350F50" />
+                        <Label Text="Never miss the important events of those you care so much about." TextColor="#350F50" FontFamily="OpenSansSemibold" />
                     </VerticalStackLayout>
 
                     <Image Source="welcome_profiles"/>
                 </VerticalStackLayout>
             </Grid>
 
-            <Button Grid.Row="1" Text="Get Started" Style="{StaticResource PrimaryButton}" />
+            <Button Grid.Row="1" Text="Get Started" Style="{StaticResource PrimaryButton}" 
+                    Command="{Binding GetStartedCommand}" FontFamily="OpenSansSemibold" />
         </Grid>
     </VerticalStackLayout>
     
