--- a/BirthYAY/BirthYAY.UI/AppShell.xaml
+++ b/BirthYAY/BirthYAY.UI/AppShell.xaml
@@ -8,5 +8,6 @@
 
     <ShellContent ContentTemplate="{DataTemplate views:WelcomePage}" Route="WelcomePage" />
     <ShellContent ContentTemplate="{DataTemplate views:LoginPage}" Route="LoginPage" />
+    <ShellContent ContentTemplate="{DataTemplate views:SignUpPage}" Route="SignUpPage" />
 
 </Shell>
