--- a/BirthYAY/BirthYAY.UI/Views/LoginPage.xaml
+++ b/BirthYAY/BirthYAY.UI/Views/LoginPage.xaml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewmodels="clr-namespace:BirthYAY.UI.ViewModels"
              x:Class="BirthYAY.UI.Views.LoginPage"
+             x:DataType="viewmodels:LoginPageViewModel"
              Shell.NavBarIsVisible="False">
 
     <VerticalStackLayout Padding="20,45">
@@ -32,7 +34,7 @@
 
                 <HorizontalStackLayout HorizontalOptions="Center">
                     <Label Text="Don't have an account?" FontFamily="OpenSansSemibold"/>
-                    <Button Text="Sign up" Style="{StaticResource LinkButton}"/>
+                    <Button Text="Sign up" Style="{StaticResource LinkButton}" Command="{Binding GoToSignUpPageCommand}"/>
                 </HorizontalStackLayout>
             </VerticalStackLayout>
         </Grid>
