--- a/BirthYAY/BirthYAY.UI/Views/LoginPasswordPage.xaml
+++ b/BirthYAY/BirthYAY.UI/Views/LoginPasswordPage.xaml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewmodel="clr-namespace:BirthYAY.UI.ViewModels"
              x:Class="BirthYAY.UI.Views.LoginPasswordPage"
-             Shell.NavBarIsVisible="False">
+             x:DataType="viewmodel:LoginPasswordPageViewModel"
+             Shell.NavBarIsVisible="False"
+             Shell.TabBarIsVisible="False">
 
     <VerticalStackLayout Padding="20,45">
         <Grid>
@@ -25,7 +28,7 @@
                 </Grid>
                 
                 <Entry Placeholder="Password" IsPassword="False" Style="{StaticResource PrimaryEntry}" />
-                <Button Text="Login" Style="{StaticResource PrimaryButton}"/>
+                <Button Text="Login" Style="{StaticResource PrimaryButton}" Command="{Binding LoginCommand}"/>
 
                 <Button Text="Forgot your password?" Style="{StaticResource LinkButton}"/>
             </VerticalStackLayout>
