--- a/BirthYAY/BirthYAY.UI/AppShell.xaml
+++ b/BirthYAY/BirthYAY.UI/AppShell.xaml
@@ -4,11 +4,18 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:views="clr-namespace:BirthYAY.UI.Views"
-    Shell.FlyoutBehavior="Disabled">
+    Shell.FlyoutBehavior="Disabled"
+    Shell.TabBarForegroundColor="{StaticResource FontPurple}">
 
     <ShellContent ContentTemplate="{DataTemplate views:WelcomePage}" Route="WelcomePage" />
     <ShellContent ContentTemplate="{DataTemplate views:LoginPage}" Route="LoginPage" />
     <ShellContent ContentTemplate="{DataTemplate views:LoginPasswordPage}" Route="LoginPasswordPage" />
     <ShellContent ContentTemplate="{DataTemplate views:SignUpPage}" Route="SignUpPage" />
+
+    <TabBar Route="Dashboard">
+        <ShellContent Icon="home.svg" Title="Home" ContentTemplate="{DataTemplate views:HomePage}" Route="HomePage" />
+        <ShellContent Icon="home.svg" Title="Home" ContentTemplate="{DataTemplate views:HomePage}" Route="HomePage" />
+        <ShellContent Icon="home.svg" Title="Home" ContentTemplate="{DataTemplate views:HomePage}" Route="HomePage" />
+    </TabBar>
 
 </Shell>
