--- a/BirthYAY/BirthYAY.UI/Views/LoginPage.xaml
+++ b/BirthYAY/BirthYAY.UI/Views/LoginPage.xaml
@@ -4,7 +4,8 @@
              xmlns:viewmodels="clr-namespace:BirthYAY.UI.ViewModels"
              x:Class="BirthYAY.UI.Views.LoginPage"
              x:DataType="viewmodels:LoginPageViewModel"
-             Shell.NavBarIsVisible="False">
+             Shell.NavBarIsVisible="False"
+             Shell.TabBarIsVisible="False">
 
     <VerticalStackLayout Padding="20,45">
         <Grid>
