--- a/BirthYAY/BirthYAY.UI/Views/LoginPasswordPage.xaml
+++ b/BirthYAY/BirthYAY.UI/Views/LoginPasswordPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodel="clr-namespace:BirthYAY.UI.ViewModels"
+             xmlns:controls="clr-namespace:BirthYAY.UI.Controls"
              x:Class="BirthYAY.UI.Views.LoginPasswordPage"
              x:DataType="viewmodel:LoginPasswordPageViewModel"
              Shell.NavBarIsVisible="False"
@@ -27,7 +28,7 @@
                     </StackLayout>
                 </Grid>
                 
-                <Entry Placeholder="Password" IsPassword="False" Style="{StaticResource PrimaryEntry}" />
+                <controls:RoundedEntry Placeholder="Password" IsPassword="True" />
                 <Button Text="Login" Style="{StaticResource PrimaryButton}" Command="{Binding LoginCommand}"/>
 
                 <Button Text="Forgot your password?" Style="{StaticResource LinkButton}"/>
