--- a/BirthYAY/BirthYAY.UI/Views/LoginPasswordPage.xaml
+++ b/BirthYAY/BirthYAY.UI/Views/LoginPasswordPage.xaml
@@ -5,8 +5,7 @@
              xmlns:controls="clr-namespace:BirthYAY.UI.Controls"
              x:Class="BirthYAY.UI.Views.LoginPasswordPage"
              x:DataType="viewmodel:LoginPasswordPageViewModel"
-             Shell.NavBarIsVisible="False"
-             Shell.TabBarIsVisible="False">
+             Shell.NavBarIsVisible="False">
 
     <VerticalStackLayout Padding="20,45">
         <Grid>
