--- a/BirthYAY/BirthYAY.UI/Views/SignUpPage.xaml
+++ b/BirthYAY/BirthYAY.UI/Views/SignUpPage.xaml
@@ -4,8 +4,7 @@
              xmlns:viewmodels="clr-namespace:BirthYAY.UI.ViewModels"
              x:Class="BirthYAY.UI.Views.SignUpPage"
              x:DataType="viewmodels:SignUpPageViewModel"
-             Shell.NavBarIsVisible="False"
-             Shell.TabBarIsVisible="False">
+             Shell.NavBarIsVisible="False">
 
     <VerticalStackLayout Padding="20,45">
         <Grid>
