--- a/BirthYAY/BirthYAY.UI/Views/WelcomePage.xaml
+++ b/BirthYAY/BirthYAY.UI/Views/WelcomePage.xaml
@@ -2,10 +2,14 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewmodels="clr-namespace:BirthYAY.UI.ViewModels"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              x:Class="BirthYAY.UI.Views.WelcomePage"
              x:DataType="viewmodels:WelcomePageViewModel"
-             Shell.NavBarIsVisible="False"
-             Shell.TabBarIsVisible="False">
+             Shell.NavBarIsVisible="False">
+
+    <ContentPage.Behaviors>
+        <toolkit:StatusBarBehavior StatusBarColor="#F3F2F1" StatusBarStyle="DarkContent"/>
+    </ContentPage.Behaviors>
     
     <VerticalStackLayout Padding="20,45">
         <Grid RowDefinitions="608, *" RowSpacing="65">
