Replace AppIcon and SearchBar

--- a/BirthYAY/BirthYAY.UI/Views/HomePage.xaml
+++ b/BirthYAY/BirthYAY.UI/Views/HomePage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             xmlns:controls="clr-namespace:BirthYAY.UI.Controls"
              x:Class="BirthYAY.UI.Views.HomePage"
              Shell.NavBarIsVisible="False">
     
@@ -20,8 +21,7 @@
             </Border>
         </Grid>
 
-        <SearchBar Placeholder="Search BirthYay" PlaceholderColor="{AppThemeBinding Dark={StaticResource White}}"
-                   BackgroundColor="{StaticResource Gray300}"/>
+        <controls:RoundedSearchBar Placeholder="Search BirthYay"/>
 
         <FlexLayout JustifyContent="SpaceEvenly">
             <RadioButton Content="Today" FontAttributes="Bold" ControlTemplate="{StaticResource CustomRadioButton}">
